Fix column1 wrapping and workshop layout problem

--- a/public/stylesheets/schedule.css
+++ b/public/stylesheets/schedule.css
@@ -121,7 +121,7 @@
   float: left;
   background-color: #3a3a3a;
   width: 122px;
-  font-size: 0.98em;
+  font-size: 0.96em;
 }
 
 .table-column1-tall {
